# axum-htmx

./: Cargo.toml
src/: handlers.rs  main.rs
src/controllers/: web.rs
src/utils/: templates.rs
templates/: base.html  hello.html  users-list.html  users.html
