[package]
name = "axum-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres"] }
uuid = {version = "1.7.0", features = ["v4", "fast-rng"]}
